# NtuaFlix

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: backend_test.yml  cli_test.yml
back-end/: .dockerignore  Dockerfile  README.md  app_factory.py  database.py  db_backup.sh  db_dropalltables.sh  db_type.py  env_template  input_tsv.py  main.py  mock_data_parser.py  models.py  requirements.txt
back-end/mock_data/: mock_review_reactions.csv  mock_reviews.csv  mock_users.csv  mock_watchlist_contents.csv  mock_watchlists.csv
back-end/routes/: admin.py  auth.py  index.py  person.py  profile.py  reviews.py  statistics.py  title.py  watchlists.py
back-end/schemas/: __init__.py  admin.py  basic.py  person.py  statistics.py  title.py
back-end/tests/: conftest.py  test_admin.py  test_person.py  test_title.py  utils.py
back-end/utils/: __init__.py  auth_wrapper.py  oauth2_custom.py  parser_tsv.py  various.py
cli-client/: README.md  docs_readme_for_devs  fill_db.sh  ntuaflix-cli.sh  pyproject.toml  requirements.txt
cli-client/ntuaflix_cli/: __init__.py  __main__.py  cli.py  config.py  utils.py
cli-client/tests/: config.py  conftest.py  test_admin.py  test_person.py  test_title.py  utils.py
cli-client/tests/testdata/: titles.json  titles_genre.json
documentation/: NTUAflix_SRS_softeng_23-34.docx  README.md  ntuaflix_softeng_23-34.vpp  postman_documentation.json
front-end/: package-lock.json  package.json
front-end/public/: index.html
front-end/src/: App.css  App.js
services/nginx/: Dockerfile  default.conf  nginx-selfsigned.crt  (+1 more)
(+63 files in other folders)
